# llms-useful-resources

./: .gitignore  README.md
scripts/: README.md
scripts/azure-ml/: README.md  azure_ml_setup_cli.sh  estimate_payg_cost.py  llama2_request.json  llama2_request_2.json  pyproject.toml  realtime_request.json  request_to_endpoint.py  request_to_endpoint_azure_ml.py  request_to_payg_llama2.py
scripts/local/llama2/: README.md  example1.txt  example2.txt  llama2-qa.ipynb
scripts/remote/: setup_llm_endpoint.py
